added basic html output endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -65,6 +65,12 @@ functions:
       - http:
           path: /hello
           method: get
+  testhtml:
+    handler: handler.testhtml
+    events:
+      - http:
+          path: /test
+          method: get
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
